<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"


    android:orientation="vertical">

    <include
        layout="@layout/activity_make_fixed_schedule_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="#FFDF86"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/time_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_9"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_9"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_10"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_10"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_11"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_11"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_12"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_12"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_13"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_13"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_13"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_14"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_14"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_15"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_15"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_16"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_16"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_17"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_17"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_18"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_18"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_18"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_19"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_19"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_19"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/time_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_20"
                    android:textSize="15sp" />

                <View
                    android:id="@+id/view_20"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/main_red" />
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/make_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" />

    </LinearLayout>

</LinearLayout>