<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/teamlist_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/teamroom_main_toolbar"
            layout="@layout/activity_teamroom_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7" />

        <LinearLayout
            android:id="@+id/first_message_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="7"
            android:background="@drawable/round_notice"
            android:elevation="5dp"
            android:orientation="horizontal"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/notice" />

            <TextView
                android:id="@+id/first_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:ellipsize="end"
                android:gravity="center|left"
                android:maxLength="10"
                android:maxLines="1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/first_message" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teamroom_increase_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:id="@+id/teamroom_chat_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="visible">


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/teamroom_chat_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:elevation="10dp"
                    android:visibility="visible"
                    app:layout_constrainedWidth="true">

                </androidx.recyclerview.widget.RecyclerView>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/teamroom_short_chat"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:gravity="bottom"
                android:orientation="horizontal"
                android:visibility="visible">


                <EditText
                    android:id="@+id/chat_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/space"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/send"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/send"
                    tools:ignore="TouchTargetSizeCheck" />
            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/teamroom_schedule"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/round_chat"
            android:elevation="10dp"
            android:visibility="visible">

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:background="#FFC107"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/teamlist_invite"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="10dp"
            app:srcCompat="@drawable/plus_room" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/drawer_menulist"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:background="#FFC107"
            android:elevation="10dp" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/room_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/out"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="left"
                android:elevation="10dp"
                app:srcCompat="@drawable/out"
                tools:layout_editor_absoluteX="200dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>